# backend

./: .env.ini  .gitignore  Makefile  README.md  main.py  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: test.yaml
alembic/: env.py
alembic/versions/: 06505539c2e6_sg.py  24ddca580d3e_created.py  2f44cc7d22ac_sg.py  73d39d3b1938_sg.py  91e598afa5f7_sg.py  95f7cde3f6e1_sg.py  af949932c723_sg.py  b20ef27dae64_sg.py  cf640bf68538_sg.py  e0c0a89a68c4_sg.py  fb5c873dd820_sg.py  fc02373447ae_sg.py  fea99af9badf_sg.py
apps/auth/: deps.py  endpoints.py  exceptions.py  schemas.py  services.py
apps/auth/routes/: __init__.py  v1.py
apps/cms/: __init__.py  exceptions.py
apps/cms/endpoints/: __init__.py  navigation.py  page.py  post.py
apps/cms/models/: __init__.py  base.py  navigation.py  page.py  post.py
apps/cms/schemas/: __init__.py  base.py  navigation.py  (+2 more)
apps/uploads/: __init__.py  endpoints.py  models.py  schemas.py  services.py
apps/users/: endpoints.py  models.py  schemas.py  services.py
bruno/: bruno.json
core/: config.py  database.py  exceptions.py  models.py  schemas.py  services.py
core/security/: __init__.py  crypto.py  exceptions.py  jwt.py
docs/: alembic.md  jwt.md  pytest.md  ulid.md
scripts/: admin.py  alembic.sh  env.sh
tests/: conftest.py  test_email.py  test_health.py
tests/auth/: __init__.py  test_deps.py  test_deps.py.bk  test_endpoints.py
tests/cms/: __init__.py  test_model_schema_consistency.py
tests/core/: test_jwt.py
tests/utils/: test_text.py
utils/: email.py  logging.py  text.py  time.py  version.py
(+10 files in other folders)
