[project]
name = "pywjs-backend"
version = "0.1.0"
description = "The FastAPI Backend for the pywjs core."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.12",
    "pydantic-settings>=2.9.1",
    "pydantic[email]>=2.11.4",
    "python-multipart>=0.0.20",
    "uvicorn>=0.34.2",
]

[dependency-groups]
dev = [
    "ruff>=0.11.9",
]
test = [
    "anyio>=4.9.0",
    "httpx>=0.28.1",
    "pytest>=8.3.5",
]
